dev/sass/style.scss
/* ... */
@font-face {
    font-family: 'Lato';
    src: url('../fonts/lato-light-webfont.eot');
    src: url('../fonts/lato-light-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/lato-light-webfont.woff2') format('woff2'),
         url('../fonts/lato-light-webfont.woff') format('woff'),
         url('../fonts/lato-light-webfont.ttf') format('truetype'),
         url('../fonts/lato-light-webfont.svg#../fonts/latolight') format('svg');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'Lato';
    src: url('../fonts/lato-regular-webfont.eot');
    src: url('../fonts/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/lato-regular-webfont.woff2') format('woff2'),
         url('../fonts/lato-regular-webfont.woff') format('woff'),
         url('../fonts/lato-regular-webfont.ttf') format('truetype'),
         url('../fonts/lato-regular-webfont.svg#../fonts/latoregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

//--------------------------------------------------------------------
// GLOBAL CLASSES
//--------------------------------------------------------------------

body {
	font-family:'Lato', sans-serif;
	color:$type;
}

.header--lrg {
	font-size:24px;
	line-height:30px;
	margin-bottom:10px;
	font-weight:bold;
}

.header--med {
	font-size:24px;
	line-height:1.5;
	margin-bottom:25px;
	font-weight:bold;
}

.header--sml {
	font-size:18px;
	line-height:1.5;
	margin-bottom:25px;
}

.copy {
	font-size:18px;
	line-height:1.5;
	font-weight:300;
}

p {
	@extend .copy;
}

.banner {
	color:#fff;
	background:$misc;
	text-align:center;
	h1 {
		text-transform:uppercase;
		padding-top:10%;
	}
	h2 {
		max-width:650px;
		display:inline-block;
		padding:0 15px 5% 15px;
	}
	a {
		color:#fff;
	}
}

.nowrap {
	white-space:nowrap;
}

.unit-scale {
	font-size:3px;
}

section p a, .banner a, .portfolio-item a, .article-navigation, .article__body a {
	position:relative;
	text-decoration:none;
	&:hover {
		&:before, &:after {
			width:0%;
		}
	}
	&:before {
		content:"";
		display:block;
		position:absolute;
		width:50%;
		height:2px;
		background:#fff;
		bottom:-3px;
		right:50%;
		transition:width .2s
	}
	&:after {
		content:"";
		display:block;
		position:absolute;
		width:50%;
		height:2px;
		background:#fff;
		bottom:-3px;
		left:50%;
		transition:width .1s
	}
}

.article__body a {
	white-space:nowrap;
}

@include bp(sml) {
	.header--lrg {
		font-size:48px;
		line-height:52px;
		margin-bottom:15px;
		font-weight:bold;

		h1 {
			padding-top:7%;
		}
		h2 {
			padding-bottom:5%;
		}
	}
}

@include bp(med) {

	.header--med {
		font-size:36px;
		line-height:normal;
	}

	.unit-scale {
		font-size:7px;
	}

	.banner {
		h1 {
			padding-top:5%;
		}
		h2 {
			padding-bottom:5%; 
		}
	}

}

@include bp(lrg) {

	.header--lrg {
		font-size:60px;
		line-height:60px;
		margin-bottom:25px;
	}

	.header--sml {
		font-size:24px;
	}

	.unit-scale {
		font-size:10px;
	}

}

//--------------------------------------------------------------------
// PAGE SPECIFIC CLASSES
//--------------------------------------------------------------------

.about section p a {
	color:$type;
	text-decoration:none;
	font-weight:bold;
	&:before, &:after {
		background:$about;
	}
}

.portfolio section p a, .portfolio-item a {
	color:$type;
	font-weight:bold;
	text-decoration:none;
	&:before, &:after {
		background:$portfolio;
	}
}

.article__body a {
	color:$type;
	font-weight:bold;
	text-decoration:none;
	&:before, &:after {
		background:$articles;
	}
}

//--------------------------------------------------------------------
// NAVIGATION STYLES
//--------------------------------------------------------------------

header {

	position:relative;
	z-index:10;

	ul {
		list-style:none;
		height:inherit;
		margin:0;
		background:#fff;
		@include clearfix; 
	}

	li {
		text-align:center;
		border-left:1px solid $border;
		box-sizing:border-box;
		float:left;
		height:inherit;
		display:table;
	}

	span.outer {
		display:table;
		width:100%;
		height:100%;
	}

	span.inner {
		display:table-cell;
		vertical-align:middle;
	}

	li.nav--about, li.nav--articles, li.nav--portfolio, li.nav--contact {
		width:25%;
	}

	nav.about .nav--about, nav.portfolio .nav--portfolio,  {
		position:relative;
		span.arrow {
			span {
				display:block;
				width: 0;
				height: 0;
				border-style: solid;
				border-width: 14px 14px 0 14px;
				border-color: #ffffff transparent transparent transparent;
				position:relative;
				&:before {
					content:"";
					width:35px;
					height:10px;
					position:absolute;
					top:-24px;
					left:-17px;
					display:block;
					background:#fff;
				}
			}
			width:28px;
			height:14px;
			bottom:-14px;
			display:block;
			position:absolute;
			left:0;
			right:0;
			margin-left:auto;
			margin-right:auto;
			&:before {
				content:"";
				width: 0;
				height: 0;
				left:0;
				top:0;
				border-style: solid;
				display:block;
				border-color: #000000 transparent transparent transparent;
				border-width: 14px 14px 0 14px;
				filter: blur(2px);
				opacity:0.25;
				position:absolute;
			}

		}
	}
}

li.nav--logo, .mobile-logo {
	border-bottom:1px solid $border;
	display:none;
	width:100%;
	font-weight:300;
	border-left:0;
	text-align:left;
	font-size:18px;
	padding:1.5%;
	box-sizing:border-box;
	strong {
		font-size:24px;
		line-height:32px;
		font-weight:bold;
		display:block;
	}
	svg.icon-logo, div.icon-logo {
		max-width:68px;
		max-height:65px;
	}
}

.icon-logo.no-svg {
	background:url("../img/sprite.png") no-repeat left top;
	width:60px;
	height:65px;
}
/* ... */

